fixed spacing

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -31,13 +31,11 @@ body {
 .column {
   flex: 50%;
   box-sizing: border-box;
-  background-image: linear-gradient(#173753, #6DAEDB);
-  background-repeat: no-repeat;
   border-radius: 15px 15px 15px 15px;
   display: block;
   width: 46%;
   padding: 4% 4%;
-  margin: 3% 6%;
+  margin: 3% 9%;
 
 }
 
@@ -131,12 +129,26 @@ p {
 .cogs120 {
   background-image: linear-gradient(#5A709E, #B4BED2);
   background-repeat: no-repeat;
+  margin-left: 3.5%;
 }
 
 .dfa {
   background-image: linear-gradient(#1C2D59, #596686);
   background-repeat: no-repeat;
+  margin-right: 3.5%;
 
+}
+
+.vr {
+  background-image: linear-gradient(#173753, #6DAEDB);
+  background-repeat: no-repeat;
+  margin-right: 3.5%;
+}
+
+.infopp {
+  background-image: linear-gradient(#979797, #DDDDDD);
+  background-repeat: no-repeat;
+  margin-left: 3.5%;
 }
 
 #cogslogo {
